--- a/templates/create.html
+++ b/templates/create.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div align="center">
   <h1><span id="text"></span></h1>
+  <a href="/" role="button">トップページ</a>
   <!-- <form action="/create" method="POST"> -->
       <div class="canvas" id="candiv"  style="border:1px solid rgb(200, 200, 200);">
           <canvas id="can" width="900px" height="600px"></canvas>
@@ -9,9 +10,9 @@
       <!-- <imput type="submit" id="data" name= "data" onClick="saveCan();" value="保存" class="save-button">保存</button> -->
         <!-- 保存と分析分ける？ -->
         <button id="img" name="img" value="認識" class="send-button" onClick="sendImage();">
-        認識！</button>  
+        保存</button>  
       <!-- </form> -->
-      <button type="button" onClick="clearCan();" value="クリア" class="clear-button">クリア</button>
+      <button type="button" onClick="clearCan();" value="クリア" class="clear-button">消去</button>
   <div id="answer"></div>
 </div>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
