--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,12 +1,16 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
+{% block title %}登録{% endblock %}
+
 {% block content %}
-<h1>ユーザー登録</h1>
-<form method="POST">
-  <label for="">ユーザー名</label>
-  <input type="text" name="user_name">
-  <label for="">パスワード</label>
-  <input type="password" name="password">
-  <input type="submit" value="新規登録">
-  <p>{{message}}</p>
-</form>
+<div class="container">
+<h1>登録</h1>
+  <form method="POST">
+    <label for="" class="form-label">名前</label>
+    <input type="text" name="user_name" class="form-control">
+    <label for="" class="form-label">パスワード</label>
+    <input type="password" name="password" class="form-control">
+    <input type="submit" value="新規登録" class="btn btn-primary">
+  </form>
+</div>
+<p>{{message}}</p>
 {% endblock %}
