--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/css/sample.css">
-  <title>自己分析日記</title>
+  <title>KAITEMITE</title>
 </head>
 <body>
   
