--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,15 @@
 
 {% block content %}
 <div class="container">
-  <h1>ログイン画面</h1>
+  <h1>ログイン</h1>
     <form method="POST" action="/login">
-      <label for="" class="form-label">ユーザー名</label>
+      <label for="" class="form-label">名前</label>
       <input type="text" name="user_name" class="form-control">
       <label for="" class="form-label">パスワード</label>
       <input type="password" name="password" class="form-control">
       <input type="submit" value="ログイン" class="btn btn-primary">
     </form>
     <p>{{message}}</p>
+    <a href="/signup" role="button">新規登録</a>
 </div>
 {% endblock %}
