--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
 {% block content %}
 
-<h1>{{header}}</h1>
-    <h6><a href="/">Return to index page</a></h6>
-    <div id="chart" class="chart"></div>
-    <div>{{description}}</div>
- <h1>HELLO WORLD!</h1>
-  <a href="index.html">TOPページ</a>
-  <div id ='plot' class ='plot'”> </div>  
+<h1>分析結果!</h1>
+<a href="/" role="button">日記</a>
+<div id="chart" class="chart"></div>
+<div>{{description}}</div>
+    <a href="/create" role="button">書く？</a>
+    <a href="/logout" role="button">またね？</a>  
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="/static/js/analysis.js"></script>
@@ -16,21 +15,5 @@
     Plotly.plot('chart',graphs,{});        
 </script>
 
-
 {% endblock %}
 
-//  <!doctype html>
-//  <html>
-//  <body style="font-family:arial, sans-serif">
-//      <h1>{{header}}</h1>
-//      <h6><a href="/">Return to index page</a></h6>
-//      <div id="chart" class="chart"></div>
-//      <div>{{description}}</div>
-//  </body>
- 
-//  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
- <!-- <script type="text/javascript">
-     var graphs = {{graphJSON , safe}};
-     Plotly.plot('chart',graphs,{});        
- </script> -->
- <!-- </html> -->
